# code-opener-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
code_opener_cli/: __init__.py  main.py  path_definitions.py
code_opener_cli/resources/: settings.json
code_opener_cli/tests/: conftest.py  test_main.py
code_opener_cli/utils/: config.py  helpers.py
tests/: test_code_opener_cli.py
