[tool.poetry]
name = "code-opener-cli"
version = "0.1.0"
description = "The CLI to hadle your projects and Editors smartly"
authors = ["Shantanu Joshi <shantanujoshi7030@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
code-opener-cli = "code-opener-cli.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
